--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,6 +5,34 @@ events {
 }
 
 http {
-	lis
-	index	index.html index.php;
+	server {
+	  listen 443 ssl;
+
+	  server_name example.com;
+
+      ssl_certificate ;#path to certificate.crt
+      ssl_certificate_key ;#path to private.key
+      ssl_protocols TLSv1.3;
+
+	  access_log off;
+
+	  root /var/www/html;
+	  index index.php;
+
+	  server_tokens off;
+	  location / {
+		# First attempt to serve request as file, then
+		# as directory, then fall back to displaying a 404.
+		try_files $uri $uri/ /index.php?$args;
+		}
+
+		location ~ \.php$ {
+            #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+            include fastcgi_params;
+            fastcgi_intercept_errors on;
+            fastcgi_pass php;
+            #The following parameter can be also included in fastcgi_params file
+            #fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
+	}
 }
