--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,7 +8,7 @@ http {
 	server {
 	  listen 443 ssl;
 
-	  server_name example.com;
+	  server_name ${DOMAIN_NAME};
 
       ssl_certificate ;#path to certificate.crt
       ssl_certificate_key ;#path to private.key
@@ -20,6 +20,7 @@ http {
 	  index index.php;
 
 	  server_tokens off;
+
 	  location / {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
