--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -24,6 +24,7 @@ http {
 	  location / {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
+		proxy_pass https://localhost:443;
 		try_files $uri $uri/ /index.php?$args;
 		}
 
@@ -33,7 +34,7 @@ http {
             fastcgi_intercept_errors on;
             fastcgi_pass php;
             #The following parameter can be also included in fastcgi_params file
-            #fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 	}
 }
