--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,4 +3,7 @@ FROM alpine:3.15.6
 RUN apk add openssl
 RUN apk add nginx
 
-COPY ./conf/nginx.conf /
+
+RUN rm /etc/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+
+COPY ./conf/nginx.conf /etc/nginx
