--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.15.6
 
-RUN apk add openssl
-RUN apk add nginx
+RUN apk add openssl \
+            nginx
 
 COPY ./conf/nginx.conf /
+
+CMD [ "nginx" ]
