--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,6 +3,15 @@ user www www;
 error_log  logs/error.log;
 pid        logs/nginx.pid;
 
+server {
+
+	listen 80;
+	listen [::]:80;
+	server_name inception;
+	return 301 https://$host$request_uri;
+
+}
+
 http {
 	server {
 	  listen 443 ssl;
