--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,3 +1,7 @@
 FROM alpine:3.15.6
 
-RUN apk add mariadb
+RUN apk update && apk upgrade && apk add --no-cache \
+        mariadb \
+        mariadb-client
+
+ENTRYPOINT [ "mysql_install_db ;", "mariadb", "start" ]
