--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,13 +8,13 @@ server {
 	listen 80;
 	listen [::]:80;
 	server_name inception;
-	return 301 https://$host$request_uri;
 
 }
 
 http {
 	server {
 	  listen 443 ssl;
+	  listen [::]:80;
 
 	  server_name ${DOMAIN_NAME};
 
@@ -45,4 +45,31 @@ http {
             fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 	}
+}
+
+server {
+    listen 80;
+
+    server_name inexpresivo.com;
+    root /var/www/html;
+    index index.php;
+
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
+
+    rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+
+    location ~ [^/]\.php(/|$) {
+        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+        if (!-f $document_root$fastcgi_script_name) {
+        return 404;
+        }
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO       $fastcgi_path_info;
+        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+        fastcgi_pass   wordpress:9000;
+        fastcgi_index  index.php;
+    }
 }
