--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:3.15.6
 
-RUN apk add nginx \
-            openssl
+RUN apk update && apk upgrade && apk add --no-cache \
+        nginx \
+        openssl
 
 #COPY ./conf/nginx.conf /
 
