--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,4 +4,4 @@ RUN apk update && apk upgrade && apk add --no-cache \
         mariadb \
         mariadb-client
 
-ENTRYPOINT [ "mysql_install_db ;", "mariadb", "start" ]
+ENTRYPOINT [ "mariadb", "setup ;", "mariadb", "start" ]
