--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -11,9 +11,9 @@ RUN apk update && apk upgrade && apk add --no-cache \
 		php7-openssl
 		#redis
 
-RUN adduser -u 82 -D -S -G www-data www-data; \
-	chown www-data:www-data /var/www/html; \
-	chmod 777 /var/www/html
+#UN adduser -u 82 -D -S -G www-data www-data; \
+#	chown www-data:www-data /var/www/html; \
+#	chmod 777 /var/www/html
 
 RUN apk update && apk upgrade && apk add --no-cache \
 		wget \
