sh to initiate database & configure it

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,9 @@
 # Page domain
-DOMAIN_NAME=pmira-pe.42.fr
+DOMAIN_NAME="pmira-pe.42.fr"
 # Certificates
 CERTS_=./~
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD="achus"
+MYSQL_USER="wp_user_access"
+MYSQL_PASSWORD="achusdenuevo"
+WP_DB_NAME="wp_db_mariadb"
