mariadb script developing

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,7 +3,7 @@ DOMAIN_NAME="pmira-pe.42.fr"
 # Certificates
 CERTS_=./~
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD="achus"
+MYSQL_ROOT_PW="achus"
 MYSQL_USER="wp_user_access"
-MYSQL_PASSWORD="achusdenuevo"
+MYSQL_PW="achusdenuevo"
 WP_DB_NAME="wp_db_mariadb"
