--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,6 +4,6 @@ RUN apk update && apk upgrade && apk add --no-cache \
         mariadb \
         mariadb-client
 
-COPY ./conf/setup.sh /tmp
+COPY ./conf/setup.sh /tmp/setup.sh
 
 ENTRYPOINT [ "sh", "/tmp/setup.sh" ]
