for testing in debian

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,29 +1,29 @@
 version: "3.9"
 services:
-  nginx:
-    build: ./requirements/nginx
-   #volumes:
-   #  - /home/pmira-pe/data:STILL FIGURING OUT
-    ports:
-      - "80:80"
-      - "443:443"
-    networks:
-      - "nginx-wp"
-    restart: always
+#  nginx:
+#    build: ./requirements/nginx
+#   #volumes:
+#   #  - /home/pmira-pe/data:STILL FIGURING OUT
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    networks:
+#      - "nginx-wp"
+#    restart: always
 
-  wordpress:
-    build: ./requirements/wordpress
-    #volumes:
-    # - /home/pmira-pe/data:/var/www/html
-    networks:
-      - nginx-wp
-      - wp-db
-    expose:
-      - "9000:9000"
-    depends_on:
-      - mariadb
-      - nginx
-    restart: always
+#  wordpress:
+#    build: ./requirements/wordpress
+#    #volumes:
+#    # - /home/pmira-pe/data:/var/www/html
+#    networks:
+#      - nginx-wp
+#      - wp-db
+#    expose:
+#      - "9000:9000"
+#    depends_on:
+#      - mariadb
+#      - nginx
+#    restart: always
 
   mariadb:
     build: ./requirements/mariadb
@@ -31,10 +31,14 @@ services:
 #      - /home/pmira-pe/data:/var/run/mysql
     networks:
       - wp-db
-#      - db:/var/lib/mysql
     expose:
      - "3306:3306"
-    restart: always
+    #restart: always
+    environment:
+      MYSQL_ROOT_PW: ${MYSQL_ROOT_PW}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PW: ${MYSQL_PW}
+      WP_DB_NAME: ${WP_DB_NAME}
 
 networks:
   nginx-wp:
