--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,33 +1,35 @@
 version: "3.9"
 services:
-#  nginx:
-#    build: ./requirements/nginx
-#   #volumes:
-#   #  - /home/pmira-pe/data:STILL FIGURING OUT
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#    networks:
-#      - "nginx-wp"
-#    restart: always
-
-  wordpress:
-    build: ./requirements/wordpress
-    #volumes:
-    # - /home/pmira-pe/data:/var/www/html
+  nginx:
+    build: ./requirements/nginx
+   #volumes:
+   #  - /home/pmira-pe/data/wordpress:/var/www/html
+    ports:
+      - "80:80"
+      - "443:443"
     networks:
-      - nginx-wp
-      - wp-db
-    expose:
-      - "9000:9000"
-    #depends_on:
-    #  - mariadb
-    #  - nginx
+      - "nginx-wp"
     environment:
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PW: ${MYSQL_PW}
-      WP_DB_NAME: ${WP_DB_NAME}
+      - DOMAIN_NAME=${DOMAIN_NAME}
     restart: always
+
+#  wordpress:
+#    build: ./requirements/wordpress
+#    #volumes:
+#    # - /home/pmira-pe/data/wordpress:/var/www/html
+#    networks:
+#      - nginx-wp
+#      - wp-db
+#    expose:
+#      - "9000:9000"
+#    #depends_on:
+#    #  - mariadb
+#    #  - nginx
+#    environment:
+#      MYSQL_USER: ${MYSQL_USER}
+#      MYSQL_PW: ${MYSQL_PW}
+#      WP_DB_NAME: ${WP_DB_NAME}
+#    restart: always
 
 #  mariadb:
 #    build: ./requirements/mariadb
