--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -4,72 +4,36 @@ error_log  logs/error.log;
 pid        logs/nginx.pid;
 
 server {
-
-	listen 80;
-	listen [::]:80;
-	server_name inception;
-
-}
-
-http {
-	server {
-	  listen 443 ssl;
-	  listen [::]:80;
-
-	  server_name ${DOMAIN_NAME};
-
-      ssl_certificate ;#path to certificate.crt
-      ssl_certificate_key ;#path to private.key
-      ssl_protocols TLSv1.3;
-
-	  access_log off;
-
-	  root /var/www/html;
-	  index index.php;
-
-	  server_tokens off;
-
-	  location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to displaying a 404.
-		proxy_pass https://localhost:443;
-		try_files $uri $uri/ /index.php?$args;
-		}
-
-		location ~ \.php$ {
-            #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-            include fastcgi_params;
-            fastcgi_intercept_errors on;
-            fastcgi_pass php;
-            #The following parameter can be also included in fastcgi_params file
-            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
-	}
-}
-
-server {
     listen 80;
-
-    server_name inexpresivo.com;
+    listen 443 ssl;
+    listen [::]:443;
+  
+    server_name ${DOMAIN_NAME};
+  
+    ssl_certificate /etc/certificate.crt;#path to certificate.crt
+    ssl_certificate_key /etc/private.key;#path to private.key
+    ssl_protocols TLSv1.2;
+  
+    access_log off;
+    server_tokens off;
+    
     root /var/www/html;
     index index.php;
-
+    
     location / {
-        try_files $uri $uri/ /index.php?$args;
+    	# First attempt to serve request as file, then
+    	# as directory, then fall back to displaying a 404.
+    	proxy_pass https://localhost:443;
+    	try_files $uri $uri/ /index.php?$args;
     }
-
-    rewrite /wp-admin$ $scheme://$host$uri/ permanent;
-
-    location ~ [^/]\.php(/|$) {
-        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-        if (!-f $document_root$fastcgi_script_name) {
-        return 404;
-        }
+    
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
+        fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO       $fastcgi_path_info;
-        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-        fastcgi_pass   wordpress:9000;
-        fastcgi_index  index.php;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     }
 }
+
