--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,9 +6,9 @@ RUN apk update && apk upgrade && apk add --no-cache \
         mkdir /etc/sslcerts; \
         openssl req -x509 -sha256 -days 356 \
                 -nodes -newkey rsa:2048 \
-                -subj "/CN=$DOMAIN_NAME/C=US/L=San Fransisco" \
-                -keyout /etc/private.key -out /etc/certificate.crt 
+                -subj "/CN=$DOMAIN_NAME/C=SP/L=MADRID" \
+                -keyout /etc/sslcerts/private.key -out /etc/sslcerts/certificate.crt 
 
-COPY ./conf/nginx.conf /etc/nginx/conf.d
+COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
 ENTRYPOINT [ "nginx", "-g", "daemon off;"]
