--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,39 +1,42 @@
-user www www;
 
 error_log  logs/error.log;
 pid        logs/nginx.pid;
 
-server {
-    listen 80;
-    listen 443 ssl;
-    listen [::]:443;
-  
-    server_name ${DOMAIN_NAME};
-  
-    ssl_certificate /etc/certificate.crt;#path to certificate.crt
-    ssl_certificate_key /etc/private.key;#path to private.key
-    ssl_protocols TLSv1.2;
-  
-    access_log off;
-    server_tokens off;
-    
-    root /var/www/html;
-    index index.php;
-    
-    location / {
-    	# First attempt to serve request as file, then
-    	# as directory, then fall back to displaying a 404.
-    	proxy_pass https://localhost:443;
-    	try_files $uri $uri/ /index.php?$args;
-    }
-    
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-    }
+events {
+  worker_connections  4096;  ## Default: 1024
 }
 
+http {
+  server {
+    server_name ${DOMAIN_NAME};
+    
+    listen 80;
+    listen 443 ssl;
+
+    ssl_certificate /etc/sslcerts/certificate.crt;#path to certificate.crt
+    ssl_certificate_key /etc/sslcerts/private.key;#path to private.key
+    ssl_protocols TLSv1.2 TLSv1.3;
+    
+    access_log off;
+    server_tokens off;
+
+    root /var/www/html;
+    index index.php;
+
+    location / {
+      # First attempt to serve request as file, then
+      # as directory, then fall back to displaying a 404.
+      #proxy_pass https://localhost:443;
+      try_files $uri $uri/ /index.php?$args;
+    }
+
+    location ~ \.php$ {
+      fastcgi_split_path_info ^(.+\.php)(/.+)$;
+      fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
+      fastcgi_index index.php;
+      include fastcgi_params;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+      fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+    }
+  }
+}
