all services for testing

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.9"
 services:
   nginx:
     build: ./requirements/nginx
-   #volumes:
-   #  - /home/pmira-pe/data/wordpress:/var/www/html
+   volumes:
+     - /home/pmira-pe/data/wordpress:/var/www/html
     ports:
       - "80:80"
       - "443:443"
@@ -13,38 +13,38 @@ services:
       - DOMAIN_NAME=${DOMAIN_NAME}
     restart: always
 
-#  wordpress:
-#    build: ./requirements/wordpress
-#    #volumes:
-#    # - /home/pmira-pe/data/wordpress:/var/www/html
-#    networks:
-#      - nginx-wp
-#      - wp-db
-#    expose:
-#      - "9000:9000"
-#    #depends_on:
-#    #  - mariadb
-#    #  - nginx
-#    environment:
-#      MYSQL_USER: ${MYSQL_USER}
-#      MYSQL_PW: ${MYSQL_PW}
-#      WP_DB_NAME: ${WP_DB_NAME}
-#    restart: always
+  wordpress:
+    build: ./requirements/wordpress
+    volumes:
+     - /home/pmira-pe/data/wordpress:/var/www/html
+    networks:
+      - nginx-wp
+      - wp-db
+    expose:
+      - "9000:9000"
+    depends_on:
+      - mariadb
+      - nginx
+    environment:
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PW: ${MYSQL_PW}
+      WP_DB_NAME: ${WP_DB_NAME}
+    restart: always
 
-#  mariadb:
-#    build: ./requirements/mariadb
-##    volumes:
-##      - /home/pmira-pe/data:/var/run/mysql
-#    networks:
-#      - wp-db
-#    expose:
-#     - "3306:3306"
-#    #restart: always
-#    environment:
-#      MYSQL_ROOT_PW: ${MYSQL_ROOT_PW}
-#      MYSQL_USER: ${MYSQL_USER}
-#      MYSQL_PW: ${MYSQL_PW}
-#      WP_DB_NAME: ${WP_DB_NAME}
+  mariadb:
+    build: ./requirements/mariadb
+    volumes:
+      - /home/pmira-pe/data:/var/run/mysql
+    networks:
+      - wp-db
+    expose:
+     - "3306:3306"
+    restart: always
+    environment:
+      MYSQL_ROOT_PW: ${MYSQL_ROOT_PW}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PW: ${MYSQL_PW}
+      WP_DB_NAME: ${WP_DB_NAME}
 
 networks:
   nginx-wp:
