--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,9 +8,18 @@ events {
 
 http {
   server {
-    server_name ${DOMAIN_NAME};
+    server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
+
+	listen 80;
+
+	location / {
+		rewrite ^ https://$host$request_uri? permanent;
+	}
+  }
+
+  server {
+    server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
     
-    listen 80;
     listen 443 ssl;
 
     ssl_certificate /etc/sslcerts/certificate.crt;#path to certificate.crt
@@ -21,7 +30,7 @@ http {
     server_tokens off;
 
     root /var/www/html;
-    index index.php;
+    index index.php index.html;
 
     location / {
       # First attempt to serve request as file, then
@@ -31,8 +40,9 @@ http {
     }
 
     location ~ \.php$ {
+	  try_files $uri =404;
       fastcgi_split_path_info ^(.+\.php)(/.+)$;
-      fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
+      fastcgi_pass 172.18.0.2:9000; #PHP for wordpress will listen on the port 9000
       fastcgi_index index.php;
       include fastcgi_params;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
