--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -33,8 +33,6 @@ http {
     index index.php index.html;
 
     location / {
-      # First attempt to serve request as file, then
-      # as directory, then fall back to displaying a 404.
       #proxy_pass https://localhost:443;
       try_files $uri $uri/ /index.php?$args;
     }
@@ -42,7 +40,7 @@ http {
     location ~ \.php$ {
 	  try_files $uri =404;
       fastcgi_split_path_info ^(.+\.php)(/.+)$;
-      fastcgi_pass 172.18.0.2:9000; #PHP for wordpress will listen on the port 9000
+      fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
       fastcgi_index index.php;
       include fastcgi_params;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
