changing root access

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -29,11 +29,11 @@ http {
     access_log off;
     server_tokens off;
 
-    root /var/www/html;
     index index.php index.html;
 
     location / {
       #proxy_pass https://localhost:443;
+    	root /var/www/html/wordpress;
       try_files $uri $uri/ /index.php?$args;
     }
 
