--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -34,7 +34,7 @@ services:
   mariadb:
     build: ./requirements/mariadb
     volumes:
-      - /home/pmira-pe/data:/var/run/mysql
+      - /home/pmira-pe/data/mariadb:/var/run/mysql
     networks:
       - wp-db
     ports:
