--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -38,7 +38,7 @@ http {
     }
 
     location ~ \.php$ {
-	  try_files $uri =404;
+      #try_files $uri =404;
       fastcgi_split_path_info ^(.+\.php)(/.+)$;
       fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
       fastcgi_index index.php;
