--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -43,7 +43,7 @@ http {
       fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
       fastcgi_index index.php;
       include fastcgi_params;
-      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+      fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
       fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     }
   }
