--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       MYSQL_PW: ${MYSQL_PW}
       WP_DB_NAME: ${WP_DB_NAME}
     restart: always
+    depends_on:
+      - mariadb
 
   mariadb:
     build: ./requirements/mariadb
