Starting with ftp service

--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,6 +1,4 @@
 FROM alpine:3.15.6
 
 RUN apk update && apk upgrade && apk add --no-cache \
-		redis
-
-ENTRYPOINT [ "redis-server", "--protected-mode", "no" ]
+		vsftpd
