--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -45,12 +45,25 @@ services:
       MYSQL_PW: ${MYSQL_PW}
       WP_DB_NAME: ${WP_DB_NAME}
 
+  #BONUS
   redis:
     build: ./requirements/bonus/redis
     #volumes:?
     networks:
       - wp-db
     restart: always
+
+  ftp:
+    build: ./requirements/bonus/ftp
+    #volumes:
+    #  - /home/pmira-pe/data/wordpress/${WP_DB_NAME}:?
+    ports:
+    - "20:20"
+    - "21:21"
+    restart: always
+    environment:
+      
+    
 
 networks:
   nginx-wp:
