--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -2,3 +2,5 @@ FROM alpine:3.15.6
 
 RUN apk update && apk upgrade && apk add --no-cache \
 		vsftpd
+
+ENTRYPOINT [ "sbin/tini", "--", "pidproxy /var/run/vsftpd/vsftpd.pid true" ]
