--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -35,4 +35,12 @@ server {
       fastcgi_param SCRIPT_FILENAME /var/www/html/wordpress/$fastcgi_script_name;
       fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     }
+
+	location ~ ^/adminer(/.*$|$) {
+	  include /etc/nginx/fastcgi_params;
+	  fastcgi_index index.pxp;
+	  fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
+      fastcgi_pass adminer:9000; #PHP for wordpress will listen on the port 9000
+		
+	}
 }
