--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -10,15 +10,15 @@ RUN apk update && apk upgrade && apk add --no-cache \
 	    php7-sqlite3 \
 	    php7-pdo_sqlite \
 	    php7-zip \
+	    sqlite \
+		wget \
+	    unzip \
+		&& wget https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php
+		#&& unzip adminer-4.8.1.php
 		# php7-mysql \
 		# php-oci8 \
 		# php-pdo_oci \
 		# php-sqlsrv \
 		# php-mssql \
-	    sqlite \
-		wget \
-	    unzip \
-		&& wget https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php \
-		&& unzip adminer-4.8.1.php
 
 ENTRYPOINT [ "/usr/sbin/php-fpm7 -F" ]
