--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -73,7 +73,16 @@ services:
     restart: always
     depends_on:
       - wordpress
-      
+    
+  portainer:
+    image: portainer/portainer:1.25.0-alpine
+    ports:
+      - 9443:9443
+      volumes:
+        - /home/pmira-pe/data/portainer:/data
+        - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+
     
 
 networks:
