--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -77,13 +77,12 @@ services:
   portainer:
     image: portainer/portainer:1.25.0-alpine
     ports:
-      - "8000:8000"
+      - "9000:9000"
     volumes:
       - /home/pmira-pe/data/portainer:/data
       - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
+    restart: always
 
-    
 
 networks:
   nginx-wp:
