--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -4,5 +4,4 @@ RUN apk update && apk upgrade && apk add --no-cache \
 		vsftpd \
 		tini
 
-ENTRYPOINT [ "tail" ,"-f", "/dev/null"]
-#ENTRYPOINT [ "/sbin/tini", "--", "pidproxy /var/run/vsftpd/vsftpd.pid true" ]
+ENTRYPOINT [ "/sbin/tini", "--", "/usr/sbin/vsftpd /etc/vsftpd/vsftpd.conf" ]
