--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -4,4 +4,5 @@ RUN apk update && apk upgrade && apk add --no-cache \
 		vsftpd \
 		tini
 
-ENTRYPOINT [ "/sbin/tini", "--", "/usr/sbin/vsftpd /etc/vsftpd/vsftpd.conf" ]
+ENTRYPOINT [ "tail", "-f", "/dev/null" ]
+#ENTRYPOINT [ "/sbin/tini", "--", "/usr/sbin/vsftpd /etc/vsftpd/vsftpd.conf" ]
