500 priv sock solved

--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -4,5 +4,7 @@ RUN apk update && apk upgrade && apk add --no-cache \
 		vsftpd \
 		tini
 
+RUN echo "seccomp_sandbox=NO" >> /etc/vsftpd/vsftpd.conf
+
 #ENTRYPOINT [ "tail", "-f", "/dev/null" ]
 ENTRYPOINT [ "/sbin/tini", "--", "/usr/sbin/vsftpd", "/etc/vsftpd/vsftpd.conf" ]
