--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -13,8 +13,8 @@ RUN sed -i "/^#/d" /etc/vsftpd/vsftpd.conf && \
 	echo "anon_root=/var/www/html" >> /etc/vsftpd/vsftpd.conf && \
 	echo "pasv_enable=YES" >> /etc/vsftpd/vsftpd.conf && \
 	echo "pasv_max_port=21110" >> /etc/vsftpd/vsftpd.conf && \
-	echo "pasv_min_port=21100" >> /etc/vsftpd/vsftpd.conf && \
-	chown ftp /var/www/html/wordpress && \
+	echo "pasv_min_port=21100" >> /etc/vsftpd/vsftpd.conf
+RUN	chown ftp /var/www/html/wordpress && \
 	chmod 744 /var/www/html/wordpress
 
 ENTRYPOINT [ "/sbin/tini", "--", "/usr/sbin/vsftpd", "/etc/vsftpd/vsftpd.conf" ]
