depends on wordpress for ftp

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -61,6 +61,8 @@ services:
     - "21:21"
     - "21100-21110:21100-21110"
     restart: always
+    depends_on:
+     - wordpress
 
   adminer:
     build: ./requirements/bonus/adminer
