--- a/srcs/requirements/bonus/static_web/Dockerfile
+++ b/srcs/requirements/bonus/static_web/Dockerfile
@@ -2,7 +2,8 @@ FROM node:lts-alpine3.16 AS build
 
 WORKDIR /app
 
-RUN git clone https://github.com/Pablichu/my_first_svelte-static-web.git && \
+RUN apt-get install git && \
+	git clone https://github.com/Pablichu/my_first_svelte-static-web.git && \
     mv my_first_svelte-static-web/* . && \
     rmdir my_first_svelte-static-web
 
